feat: Update EPUB generation to include cover image and enhance info page layout

--- a/src/pixiv2epub/assets/epub/pixiv/cover_page.xhtml.j2
+++ b/src/pixiv2epub/assets/epub/pixiv/cover_page.xhtml.j2
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div><img src="../{{ cover_image_href }}" alt="カバー画像" /></div>
+    <div><img src="{{ cover_image_href }}" alt="カバー画像" /></div>
 </body>
 
 </html>
