--- a/src/pixiv2epub/assets/epub/pixiv/info_page.xhtml.j2
+++ b/src/pixiv2epub/assets/epub/pixiv/info_page.xhtml.j2
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
     <meta charset="utf-8" />
     {% if css_path %}
-    <link rel="stylesheet" type="text/css" href="../{{ css_path }}" />{% endif %}
+    <link rel="stylesheet" type="text/css" href="{{ css_path }}" />{% endif %}
 </head>
 
 <body>
