--- a/src/pixiv2epub/assets/epub/default/cover_page.xhtml.j2
+++ b/src/pixiv2epub/assets/epub/default/cover_page.xhtml.j2
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
 
 <head>
-    <title>カバー</title>
+    <title>表紙</title>
     <meta charset="utf-8" />
     <style>
         body {
