--- a/src/pixiv2epub/assets/epub/default/style.css.j2
+++ b/src/pixiv2epub/assets/epub/default/style.css.j2
@@ -1,3 +1,9 @@
+/* CSSカスタムプロパティ（変数）を定義 */
+:root {
+    --tag-color: #0073bb;
+    --date-color: #888;
+}
+
 /* 全体の基本設定 */
 body {
     line-height: 1.7;
@@ -40,13 +46,13 @@ h3[epub|type="title"] {
 
 /* タグ */
 .tags {
-    color: #0073bb;
+    color: var(--tag-color); 
     line-height: 1.8;
 }
 
 /* 日付 */
 .date {
-    color: #888;
+    color: var(--date-color); 
     text-align: left;
 }
 
