--- a/src/pixiv2epub/assets/epub/default/content.opf.j2
+++ b/src/pixiv2epub/assets/epub/default/content.opf.j2
@@ -3,41 +3,51 @@
 <package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="bookid" xml:lang="ja">
     <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
         {# UCM Core Metadata (Python側で処理済み) #}
-        <dc:title>{{ metadata.title }}</dc:title>
+        {# 修正: metadata.title -> manifest.core.name #}
+        <dc:title>{{ manifest.core.name }}</dc:title>
         <dc:language>ja</dc:language>
-        {# 識別子はPython側で生成したURNを使用 #}
-        <dc:identifier id="bookid">{{ metadata.identifier.uuid }}</dc:identifier>
-        <dc:creator id="author">{{ metadata.author.name }}</dc:creator>
+        {# 修正: metadata.identifier.uuid -> manifest.core.id_ (UCMの正規tag: URI) #}
+        <dc:identifier id="bookid">{{ manifest.core.id_ }}</dc:identifier>
+        {# 修正: metadata.author.name -> manifest.core.author.name #}
+        <dc:creator id="author">{{ manifest.core.author.name }}</dc:creator>
         <meta refines="#author" property="role" scheme="marc:relators">aut</meta>
-        <dc:date>{{ formatted_date }}</dc:date> {# formatted_date はPythonから渡される #}
-        <meta property="dcterms:modified">{{ modified_time }}</meta> {# modified_time はPythonから渡される #}
+        {# 修正: formatted_date -> manifest.core.datePublished.isoformat() #}
+        {# 修正: modified_time -> manifest.core.dateModified.isoformat() #}
+        <dc:date>{{ manifest.core.datePublished.isoformat() }}</dc:date>
+        <meta property="dcterms:modified">{{ (manifest.core.dateModified or manifest.core.datePublished).isoformat() }}
+        </meta>
 
         {# Provider Specific Identifiers (Python側で処理済み) #}
-        {% if metadata.identifier.novel_id -%}
-        <dc:identifier id="pixiv-id">urn:pixiv:novel:{{ metadata.identifier.novel_id }}</dc:identifier>
+        {# 修正: metadata.identifier.novel_id -> provider_ids.novel_id #}
+        {% if provider_ids.novel_id -%}
+        <dc:identifier id="pixiv-id">urn:pixiv:novel:{{ provider_ids.novel_id }}</dc:identifier>
         {% endif -%}
-        {% if metadata.identifier.post_id -%}
-        <dc:identifier id="fanbox-id">urn:fanbox:post:{{ metadata.identifier.post_id }}</dc:identifier>
+        {# 修正: metadata.identifier.post_id -> provider_ids.post_id #}
+        {% if provider_ids.post_id -%}
+        <dc:identifier id="fanbox-id">urn:fanbox:post:{{ provider_ids.post_id }}</dc:identifier>
         {% endif -%}
 
         {# Series Information (Python側で処理済み) #}
-        {% if metadata.series -%}
-        <meta property="belongs-to-collection" id="series-title">{{ metadata.series.title }}</meta>
+        {# 修正: metadata.series -> manifest.core.isPartOf #}
+        {% if manifest.core.isPartOf -%}
+        <meta property="belongs-to-collection" id="series-title">{{ manifest.core.isPartOf.name }}</meta>
         <meta refines="#series-title" property="collection-type">series</meta>
-        {% if metadata.series.order -%}
-        <meta refines="#series-title" property="group-position">{{ metadata.series.order }}</meta>
+        {% if manifest.core.isPartOf.order -%}
+        <meta refines="#series-title" property="group-position">{{ manifest.core.isPartOf.order }}</meta>
         {% endif -%}
         {# シリーズIDはPython側で抽出済みのものを使用 #}
-        <meta property="meta" scheme="urn:{{ 'pixiv' if metadata.identifier.novel_id else 'fanbox' }}:series:id">{{
-        metadata.series.id }}</meta>
+        <meta property="meta" scheme="urn:{{ 'pixiv' if provider_ids.novel_id else 'fanbox' }}:series:id">{{
+        manifest.core.isPartOf.identifier.split(":")[-1] }}</meta>
         {% endif -%}
 
         {# Description and Tags #}
-        {% if metadata.description -%}
+        {# 修正: metadata.description -> manifest.core.description #}
+        {% if manifest.core.description -%}
         {# テンプレート内のフィルタはプレゼンテーションロジックとして許容 #}
-        <dc:description>{{ metadata.description | striptags | replace('\n', ' ') }}</dc:description>
+        <dc:description>{{ manifest.core.description | striptags | replace('\n', ' ') }}</dc:description>
         {% endif -%}
-        {% for tag in metadata.tags -%}
+        {# 修正: metadata.tags -> manifest.core.keywords #}
+        {% for tag in manifest.core.keywords -%}
         <dc:subject>{{ tag }}</dc:subject>
         {% endfor -%}
 
