--- a/src/pixiv2epub/assets/epub/default/info_page.xhtml.j2
+++ b/src/pixiv2epub/assets/epub/default/info_page.xhtml.j2
@@ -1,10 +1,9 @@
-{# FILE: src/pixiv2epub/assets/epub/default/info_page.xhtml.j2 #}
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="ja">
 
 <head>
-    <title>{{ manifest.core.name }}</title> {# Use UCM core name #}
+    <title>{{ manifest.core.name }}</title>
     <meta charset="utf-8" />
     {% if css_path %}
     <link rel="stylesheet" type="text/css" href="{{ css_path }}" />{% endif %}
@@ -12,25 +11,27 @@
 
 <body>
     <div class="main-content">
-        <h3 epub:type="title">{{ manifest.core.name }}</h3> {# Use UCM core name #}
-        <p class="author">作者：{{ manifest.core.author.name }}</p> {# Use UCM author name #}
+        <h3 epub:type="title">{{ manifest.core.name }}</h3>
+        <p class="author">作者：{{ manifest.core.author.name }}</p>
 
-        {% if cover_href %} {# cover_href is passed directly by generator #}
+        {% if cover_href %}
         <div class="cover-container">
             <img src="{{ cover_href }}" alt="カバー画像" />
         </div>
         {% endif %}
 
-        {% if manifest.core.description %} {# Use UCM description #}
-        <div class="description">{{ manifest.core.description | safe }}</div> {# Assuming description is already HTML escaped/parsed #}
+        {% if manifest.core.description %}
+        <div class="description">{{ manifest.core.description | safe }}</div>
         {% endif %}
 
-        {% if manifest.core.keywords %} {# Use UCM keywords #}
-        <p class="tags">{% for tag in manifest.core.keywords %}#{{ tag }}{% if not loop.last %} {% endif %}{% endfor %}</p>
+        {% if manifest.core.keywords %}
+        <p class="tags">{% for tag in manifest.core.keywords %}#{{ tag }}{% if not loop.last %} {% endif %}{% endfor %}
+        </p>
         {% endif %}
 
-        <p class="date">{{ formatted_date }}</p> {# formatted_date passed by generator #}
-        <p class="source-link"><a href="{{ manifest.core.mainEntityOfPage }}">{{ manifest.core.mainEntityOfPage }}</a></p> {# Use UCM mainEntityOfPage #}
+        <p class="date">{{ formatted_date }}</p>
+        <p class="source-link"><a href="{{ manifest.core.mainEntityOfPage }}">{{ manifest.core.mainEntityOfPage }}</a>
+        </p>
     </div>
 </body>
 
