--- a/src/pixiv2epub/assets/epub/pixiv/info_page.xhtml.j2
+++ b/src/pixiv2epub/assets/epub/pixiv/info_page.xhtml.j2
@@ -1,10 +1,9 @@
-{# FILE: src/pixiv2epub/assets/epub/pixiv/info_page.xhtml.j2 #}
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="ja">
 
 <head>
-    <title>{{ manifest.core.name }}</title> {# Use UCM core name #}
+    <title>{{ manifest.core.name }}</title>
     <meta charset="utf-8" />
     {% if css_path %}
     <link rel="stylesheet" type="text/css" href="{{ css_path }}" />{% endif %}
@@ -13,43 +12,42 @@
 <body>
     <div class="main-content">
         <h3 epub:type="title">
-            {% if manifest.core.isPartOf %} {# Check UCM series info #}
+            {% if manifest.core.isPartOf %}
             <span class="series-title-inline">
                 {{ manifest.core.isPartOf.name }}{% if manifest.core.isPartOf.order %} #{{ manifest.core.isPartOf.order
-                }}{% endif %} {# Use UCM series info #}
+                }}{% endif %}
             </span><br /> {% endif %}
-            {{ manifest.core.name }} {# Use UCM core name #}
+            {{ manifest.core.name }}
         </h3>
-        <p class="author">作者：{{ manifest.core.author.name }}</p> {# Use UCM author name #}
+        <p class="author">作者：{{ manifest.core.author.name }}</p>
         <table class="cover-meta-table">
             <tr>
                 <td class="spacer-cell"></td>
                 <td class="cover-cell">
-                    {% if cover_href %} {# cover_href passed by generator #}
+                    {% if cover_href %}
                     <img src="{{ cover_href }}" alt="カバー画像" />
                     {% endif %}
                 </td>
                 <td class="char-count-cell">
-                    {# text_length passed by generator from UCM providerData #}
+
                     <span class="char-count">{% if text_length is number %}{{ "{:,}".format(text_length) }}{% else %}{{
                         text_length }}{% endif %}文字</span>
                 </td>
             </tr>
         </table>
 
-        {% if manifest.core.description %} {# Use UCM description #}
-        <div class="description">{{ manifest.core.description | safe }}</div> {# Assuming description is already parsed
-        #}
+        {% if manifest.core.description %}
+        <div class="description">{{ manifest.core.description | safe }}</div>
         {% endif %}
 
-        {% if manifest.core.keywords %} {# Use UCM keywords #}
+        {% if manifest.core.keywords %}
         <p class="tags">{% for tag in manifest.core.keywords %}#{{ tag }}{% if not loop.last %} {% endif %}{% endfor %}
         </p>
         {% endif %}
 
-        <p class="date">{{ formatted_date }}</p> {# formatted_date passed by generator #}
+        <p class="date">{{ formatted_date }}</p>
         <p class="source-link"><a href="{{ manifest.core.mainEntityOfPage }}">{{ manifest.core.mainEntityOfPage }}</a>
-        </p> {# Use UCM mainEntityOfPage #}
+        </p>
     </div>
 </body>
 
